Fixed the issue with the cut off on the bottom of the page and changes a few things in the me text

--- a/static/me-style.css
+++ b/static/me-style.css
@@ -25,7 +25,7 @@ html, body {
     grid-template-columns: 100%;
     background-color: #000000 none;
     color: #444;
-    margin: 0 0 4vh 0;
+    margin: 0 0 8vh 0;
   }
 }
 
@@ -35,7 +35,7 @@ html, body {
     grid-template-columns: 100%;
     background-color: #000000 none;
     color: #444;
-    margin: 0 5vw 4vh 5vw;
+    margin: 0 5vw 8vh 5vw;
   }
 }
 
@@ -45,7 +45,7 @@ html, body {
     grid-template-columns: 50% 50%;
     background-color: #000000 none;
     color: #444;
-    margin: 0 10vw 4vh 10vw;
+    margin: 0 10vw 8vh 10vw;
   }
 }
 
@@ -54,7 +54,7 @@ a {
 }
 
 a:hover {
-  color: var(--accent-color);
+  color: var(--pink-accent);
 }
 
 .a {
@@ -81,7 +81,7 @@ p {
 }
 
 .small-text {
-  color: #858585;
+  color: #C1C1C1;
   font-size: 3vmin;
   margin: 0;
   padding: 0.5rem 0;
